<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_next" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/join_main_msg"
        android:textSize="@dimen/textsize_max" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/join_sub_msg"
        android:textSize="@dimen/textsize_medium" />

    <EditText
        android:id="@+id/edtvName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_hint_name" />

    <EditText
        android:id="@+id/edtvEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_hint_email" />

    <EditText
        android:id="@+id/edtvPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_hint_password" />
</LinearLayout>